Test game interactor other step not tested yet